--- a/Ugrilaižed_keled.mw
+++ b/Ugrilaižed_keled.mw
@@ -1,7 +1,8 @@
 [[Fail:Lenguas ugrias.png|thumb|right|300px|Ugrilaižiden keliden leviganduz Evrazijas]]
-'''Ugrilaižed keled''' oma [[uraližed keled|uraližiden keliden]] pala. Ned mülütadas koume kel't: [[mad'jaran kel']] (pagištas [[Mad'jaranma]]s), [[hantin kel']] i [[mansin kel']] (molembil pagištas [[Venäma]]s).
+'''Ugrilaižed keled''' oma [[uraližed keled|uraližen kel'kundan]] pala. Ned mülütadas koume kel't: [[mad'jaran kel']] (pagištas [[Mad'jaranma]]s), [[hantin kel']] i [[mansin kel']] (molembil pagištas [[Venäma]]n Sibirin päivlaskmas).
 
-Ugrilaine ezikel' formiruihe 3. voz'tuhal EME suomalaiž-ugrilaižen ezikelen čihodamižen satuseks kaks'haze. Nügüd'aigan erased tedomehed pučihe siš teorijaspäi, miše ugrilaižil kelil om ühthižid jurid, i pagištas erazvuiččen augotižlibundan idiomiden sekundarižes konvergencijas kel'ühtištusen ramuziš.
+== Istorii ==
+Ugrilaine ezikel' formiruihe koumandel voz'tuhal EME suomalaiž-ugrilaižen ezikelen čihodamižen kaks'haze rezul'tataks. Nügüd'aigan erased tedomehed pučihe siš teorijaspäi, miše ugrilaižil kelil om ühthižid jurid, i pagištas erazvuiččen augotižlibundan idiomiden sekundarižes konvergencijas kel'ühtištusen ramuziš.
 
 Kaik läz 15 mln ristituid pagištas nenil kelil mail'mas, enambuz otab kävutamižhe mad'jaran kel't.
 
@@ -10,7 +11,7 @@ Ugrilaižiden keliden pagižijad ei toimetagoi toine tošt ani. Sen ližaks, man
 
 Nene keled oma agglütinativižed.
 
-Kaikil ugrilaižil kelil om kändoid, ika niiden lugu om erazvuitte jogahižel kelel; ozutesikš, mansin kelel om 7 kändod vaiše, i madjaran kelel om enamba mi 20 kändod. Kaikil ugrilaižil kelil ei ole suguid.
+Kaikil ugrilaižil kelil om kändoid, ika niiden lugu om erazvuitte jogahižel kelel; ozutesikš, mansin kelel om aeičeme kändod vaiše, i madjaran kelel om enamba mi 20 kändod. Kaikil ugrilaižil kelil ei ole suguid.
 
 Suffiksad kävutasoiš jonoštamha «minun», «sinun» da toižid pojavid pronominoid: ''házam'' «minun pert'» = ''ház'' «pert'» + ''-am'' «minun» (mad'jaran kel').
 
