*Empty MediaWiki Message*

--- a/Ugrilaižed_keled.mw
+++ b/Ugrilaižed_keled.mw
@@ -4,14 +4,14 @@
 == Istorii ==
 Ugrilaine ezikel' formiruihe koumandel voz'tuhal EME suomalaiž-ugrilaižen ezikelen čihodamižen kaks'haze rezul'tataks. Nügüd'aigan erased tedomehed pučihe siš teorijaspäi, miše ugrilaižil kelil om ühthižid jurid, i pagištas erazvuiččen augotižlibundan idiomiden sekundarižes konvergencijas kel'ühtištusen ramuziš.
 
-Kaik läz 15 mln ristituid pagištas nenil kelil mail'mas, enambuz otab kävutamižhe mad'jaran kel't.
+Kaik läz 15 mln ristituid pagištas nenil kelil mail'mas, sur' enambuz otab kävutamižhe mad'jaran kel't.
 
 == Erinendad ==
 Ugrilaižiden keliden pagižijad ei toimetagoi toine tošt ani. Sen ližaks, mansin da hantin keliden erasiden paginoiden pagižijad ei toimetagoi toine tošt mugažo.
 
 Nene keled oma agglütinativižed.
 
-Kaikil ugrilaižil kelil om kändoid, ika niiden lugu om erazvuitte jogahižel kelel; ozutesikš, mansin kelel om aeičeme kändod vaiše, i madjaran kelel om enamba mi 20 kändod. Kaikil ugrilaižil kelil ei ole suguid.
+Kaikil ugrilaižil kelil om kändoid, ika niiden lugu om erazvuitte jogahižel kelel; ozutesikš, mansin kelel om seičeme kändod vaiše, i madjaran kelel om enamba mi 20 kändod. Kaikil ugrilaižil kelil ei ole suguid.
 
 Suffiksad kävutasoiš jonoštamha «minun», «sinun» da toižid pojavid pronominoid: ''házam'' «minun pert'» = ''ház'' «pert'» + ''-am'' «minun» (mad'jaran kel').
 
