+galerei, +hom, aktualizacii

--- a/Sol'-Ileck.mw
+++ b/Sol'-Ileck.mw
@@ -1,35 +1,47 @@
 {{Eländpunkt
  | Nimi = Sol'-Ileck<br />Соль-Илецк
- | Lidnanznam = 
- | Flag = Flag of Sol-Iletsk (Orenburg oblast).png
+ | Lidnanznam = Coat of Arms of Sol-Iletsk.gif
+ | Flag = Flag of Sol-Iletsk.svg
  | Lidnanznam text = Sol'-Ileckan lidnanznam
  | Flag text = Sol'-Ileckan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 27,189
- | Voz' = 2017
+ | Eläjiden lugu = 26,655
+ | Voz' = 2021
  | Pind = 185.3
  | Fail = Соль-Илецк - panoramio (3).jpg
- | Pämez' = Aleksei Kuz'min (2016—)
+ | Pämez' = Aleksei Kuz'min<br />(2016—)
  | Telefonkod = +7-35336-xx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Sol'-Ileck''' ({{lang-ru|Соль-Илецк}}, {{lang-tt|Тоз-Түбә / Тоз-Иләк}}) om [[Venäma]]n lidn da lebutaho [[Orenburgan agj]]an suves. Se om [[Sol'-Ileckan lidnümbrik]]on (edel 2016 vot — rajonan) administrativine keskuz.
+[[Fail:MapOfSolIletsk.png|thumb|left|250px|Lidnan da sen ümbrišton shematine kart (2019)]]
+'''Sol'-Ileck''' ({{lang-ru|Соль-Илецк}}, {{lang-tt|Тоз-Түбә / Тоз-Иләк}}) om [[Venäma]]n lidn da lebutaho [[Orenburgan agj]]an suves. Se om [[Sol'-Ileckan lidnümbrik]]on (edel 2016. vot — rajonan) administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1744 žiloks samha [[keitandsol]]ad. Vl 1754 sauvoihe ''Ilekan Kaičend-lidnusen'' ({{lang-ru|крепость Илецкая Защита}}) kalaidajid heimoid vaste. Žilo sai lidnan statusad vl 1865 udenke ''Ileck''-nimenke. Vl 1926 se kändihe ''lidnanvuiččeks Ileckoje-žiloks''. Vl 1935 nimitihe sidä Ilekan Kaičend:aks möst. Vspäi 1945 kätihe žilod lidnaks tošti da nimitihe nügüdläižikš.
 
+Sol'-Ileckan ižandusen päsarakod oma sötmižheinänobrädindmašiništon tehmine jäl'gregidenke da keitandsolan samine. Röunanverine Ileck-1-raudtesol'm om Kazahstanan ičezkaluištos. Kezaaigan äi matknikoid tuldas järviden randoidenno lebutamha
+
 == Geografijan andmused ==
-Lidn sijadase Ilek-jogen molembil randoil ([[Ural (jogi)|Uralan]] hura ližajogi), sen keskuz sijadase 125 m korktusel valdmeren pindan päl.
+Lidn sijadase [[Ilek (Uralan ližajogi)|Ilek]]-jogen molembil randoil ({{lang-ru|Иле́к}}, [[Ural (jogi)|Uralan]] hura ližajogi), sen keskuz sijadase 125 m korktusel valdmeren pindan päl.
 
 Redu- da solakahad järved oma lidnan südäimes. Matkad [[Orenburg]]hasai om 70 km pohjoižhe i se om lähembaine lidn, [[Kazahstan]]an röunhasai — läz 30 km suvipäivlaskmha.
 
-== Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 28 337 ristitud, rajonan ristitišton pol'. Kaikiš suremb ristitišt oli vl 2011 — 28 400 eläjad.
+== Eläjad ==
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 28 337 ristitud, rajonan ristitišton pol'. Kaikiš suremb ristitišt oli 28 400 eläjad vl 2011.
 
 Rahvahad (vl 2010, enamba 1%, ozutadud rahvahudenke): [[venälaižed]] — 63,8%, [[kazahlaižed]] — 17,5%, [[totarlaižed]] — 10,1%, [[ukrainalaižed]] — 3,4%, [[saksalaižed]] — 1,6%, toižed rahvahad — 3,6%.
 
-Ižandusen päsarakod oma sötmižheinänobrädindmašiništon tehmine jäl'gregidenke da keitandsolan samine. Röunanverine Ileck-1-raudtesol'm om Kazahstanan ičezkaluištos.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume pühäpertid<ref>[http://sobory.ru/geo/locat/13593 Sol'-Ileckan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: kaks' jumalanpertid i časoun'.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Сквер революционеров.jpg|Revolücijan borcujiden skver i velleskaum puištos Leninan Komsomolan nimed (2017)
+Церковь Казанская Соль-Илецк.jpg|Jumalanmaman Kazanin jumalaižen puine jumalanpert', vn 2021 nägu
+Развал.jpg|Solansamižen «Russol'»-edheotand Razval-järven randal i kurort vn 2016 elokus
+Вид на курорт г.Соль-Илецк.jpg|Nägu lidnan kurortha vn 2017 elokus
+Соль-Илецк, Оренбургская область - panoramio.jpg|Raudted lidnas vl 2013
+</gallery>
 
 == Homaičendad ==
 <references/>
