+ galerei, +hom, aktualizacii

--- a/Kuvandik.mw
+++ b/Kuvandik.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Kuvandikan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 24,131
- | Voz' = 2017
+ | Eläjiden lugu = 23,225
+ | Voz' = 2021
  | Pind = 42.06
  | Fail = В Кувандыке - panoramio.jpg
  | Pämez' = Vladimir Gončarov<br />(sügüz'ku 2007—)
@@ -14,20 +14,35 @@
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Kuvandik''' ({{lang-ru|Кувандык}}, {{lang-ba|Ҡыуандыҡ}}, {{lang-tt|Куандык}}) om [[Venäma]]n lidn [[Orenburgan agj]]an päivnouzmaižes palas. Se om [[Kuvandikan lidnümbrik]]on administrativine keskuz.
+'''Kuvandik''' ({{lang-ru|Кувандык}}, {{lang-ba|Ҡыуандыҡ}} «ihastuiba»<ref>''Абсалямова Ю. А.'' Башкиры Восточного Оренбуржья (Orenburgan agjan päivnouzman baškiralaižed) / ИИЯЛ УНЦ РАН. — Uf, 2016. — 184 lp. {{ref-ru}}</ref>, {{lang-tt|Куандык}}) om [[Venäma]]n lidn [[Orenburgan agj]]an päivnouzmaižes palas. Se om [[Kuvandikan lidnümbrik]]on administrativine keskuz.
 
 == Istorii ==
-''Pokrovk-külä'' oli olmas Kuvandičk-jogen randal ({{lang-ru|Кувандычка}}) nügüdläižen lidnan territorijal 20. voz'sadan augotišes. Eländpunktan aluz om pandud vl 1914, konz saudihe Kuvandik-raudtestancijad. Sen mödhe nimitihe stancijan žilod, sid' Pokrovk-küläd zavodihe nimitada mugažo. Radnikžilo sai lidnan statusad vl 1953. Lidn šingotase mašiništonsauvomižen i sömtegimišton edheotandoil, mugažo magniiühtnendoiden tegim i mägisuksiden kompleks ratas Kuvandikas.
+''Pokrovk-külä'' oli olmas Kuvandičk-jogen randal ({{lang-ru|Кувандычка}}) nügüdläižen lidnan territorijal 20. voz'sadan augotišes. Eländpunktan aluz om pandud vl 1914, konz saudihe Kuvandik-raudtestancijad. Sen mödhe nimitihe stancijan žilod, sid' Pokrovk-küläd zavodihe nimitada mugažo. Radnikžilo sai lidnan statusad vl 1953.
+
+Kuvandik šingotase mašiništonsauvomižen i sömtegimišton edheotandoil, mugažo [[magnii|magniiühtnendoiden]] tegim i mägisuksiden kompleks ratas Kuvandikas.
 
 == Geografijan andmused ==
 Lidn sijadase Sakmar-jogen randal ([[Ural (jogi)|Uralan]] oiged ližajogi), 210 m ü.m.t. keskmäižel korktusel. Matkad [[Orenburg]]hasai om 194 km päivlaskmha, [[Orsk]]hasai — 90 km päivnouzmha. Lähembaine lidn om [[Mednogorsk]] 20 km päivnouzmha avtotedme.
 
-79 eländpunktad mülüdas lidnümbrikho Kuvandikan ližaks.
+Kaik 79 eländpunktad mülüdas lidnümbrikho Kuvandikan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 26 169 ristitud. Kaikiš suremb lidnan ristitišt oli 29..30 tuhad vozil 1992−2001 (vl 2000 — 30 700 rist.).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 26 169 ristitud. Kaikiš suremb lidnan ristitišt oli 29..30 tuhad vozil 1992−2001 (30 700 rist. vl 2000).
 
 Rahvahad (enamba 1% vl 2010, rahvahuden ozutandata): [[venälaižed]] — 75,5%, [[baškiralaižed]] — 10,5%, [[totarlaižed]] — 7,9%, [[ukrainalaižed]] — 2,1%, toižed rahvahad — 4,0%.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken jumalanpert'<ref>[http://sobory.ru/geo/locat/20255 Kuvandikan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om pühästadud vl 1994. [[Islam]]an kaks' pühäpertid oma avaitud lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+В центре Кувандыка - panoramio.jpg|Lidnan keskuzpalas (2012)
+01 Кувандык. Здание Покровского храма.jpg|Jumalanmaman Katken jumalanpert', vn 2021 nägu
+01 Кувандык. Поликлиника города.jpg|Lidnan poliklinik (2021)
+Рядом с вокзалом Кувандыка - Near Kuvandyk train station - panoramio.jpg|Läz Kuvandik-päraudtestancijad vl 2010
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://regionkuv.orb.ru/ Kuvandikan lidnümbrikon tobmuden aluzkundoiden oficialine sait (''regionkuv.orb.ru'').] {{ref-ru}}
