--- a/Lep.mw
+++ b/Lep.mw
@@ -35,6 +35,11 @@ Lep paremboičeb mahust, ka semetas kaivuztegimišton samižen jändusil. Aigali
 * ''Lepišt, lepšom'' — lepaine mec.
 * ''Roug, rougad'' — lepan kor' mujutamha [[kangaz|kanghid]].
 
+== Lepha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Lepaižes kandospäi lepaine barbaine-ki kazvab.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Lepač]]
 
