/* Kuldha sidodud vepsän muštatišed da ozoitesed */ +

--- a/Kuld.mw
+++ b/Kuld.mw
@@ -25,6 +25,7 @@ Kuld om lujas tetab juvelirine metall. Ottas kävutamižhe sidä mugažo elektro
 * ''Ei i car' kuldad sö.''
 * ''Ei kaik ole kuld, mi kuštab, ei kaik ole hobed, mi hoštab.''
 * ''Kal'hemb kuldad om puhtaz südäin.''
+* ''Kuld redus-ki nägub.''
 * ''Tervhuz om kal'hemb kuldad.''
 </blockquote>
 
