--- a/Rahad.mw
+++ b/Rahad.mw
@@ -20,6 +20,7 @@ Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaiže
 
 == Rahoiže sidodud vepsän muštatišed ==
 <blockquote>
+* ''Den'gad den'goid ei olgoi magedamb.''
 * ''Den'gad rades tuldas, a vihel'dusel lähttas.''
 * ''Den'goid kuti kažil kündlid.''
 * ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
