--- a/Ö_(aig).mw
+++ b/Ö_(aig).mw
@@ -1,10 +1,15 @@
 {{10000}}
 {{Znamoičendad|Ö}}
-[[Fail:Admiralteysky bridge in Gatchina.jpg|thumb|right|250px|Ö [[Gatčin]]an ümbrištos]]
+[[Fail:Admiralteysky bridge in Gatchina.jpg|thumb|right|250px|Ö [[Gatčin]]an ümbrištos, [[Leningradan agj]], [[Venäma]]]]
 [[Fail:Magic Sankt Petersburg - Kunstkammer at White Nights (Weisse Nächte).jpg|thumb|right|250px|[[Vauktad öd|Vauged ö]] [[Piter]]iš, [[Kunstkamer]]an sires]]
 '''Ö''' om [[aig]]an keskust, mäneb jäl'ges [[eht]]ad da [[homendez|homendesen]] edes. Kaidan hamas ([[Ma]]n täht), ö om aigkeskust, konz [[Päiväine]] om alemba, mi [[gorizont]]an linijad. Ö tegese jäl'ges [[tikahtuz|tikahtust]]. 
 
 Ku öl Päiväine om gorizontan südäimes, necidä aigpordod kuctas '''[[vauktad öd|vauktaks öks]]'''. Nece näguz voib nähta [[keza]]l Man pohjoižes (sidä kesken agjoiš, kus [[Vepsänma]] sijadase).
+
+== Öihe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Hüvä vest' öhuden völ magadab, a huba pigai tuleb.''
+</blockquote>
 
 == Kacu mugažo ==
 * [[Päivesen aig]]
