--- a/Not.mw
+++ b/Not.mw
@@ -3,14 +3,14 @@
 
 Notan palad: čup, emä, kida, kos'ak, sorod, suug (suugpu, rindverk), verg.
 
-== Notiden tipad ==
+== Notiden toižendad ==
 * ''Jänot'' — not jänalaižen püdon täht.
 * ''Mutnik'' — pakssil'mäine not maimkalad püdamha.
 * ''Paltinnot'' — kudotud paltnaspäi not.
 * ''Tagas'' — sur' pakssil'mäine not kalan tal'veližen püdandale.
 * ''Vada'' — pen' nevod, kudambad vedadas kahtes venehes ištten (jogiš — ''jogivada'').
 
-== Notaha sidotud tärtused ==
+== Notaha sidodud tärtused ==
 * ''Emälähte'' — lähte, kuspäi not sadas jänalaižen püdon aigan.
 * ''Emänik'' — notan emän vedatai, jänalaižen püdon ühtnii.
 * ''Ižalähte'' — lähte, kuna not pästtas jänalaižen püdon aigan.
@@ -20,9 +20,13 @@ Notan palad: čup, emä, kida, kos'ak, sorod, suug (suugpu, rindverk), verg.
 * ''Puraznik'' — lähtkiden tautai, jänalaižen püdon ühtnii.
 * ''Šaid'' — anšpug vedamha notad jän al.
 
+== Notha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Huba not travib katl'an.''
+</blockquote>
+
 == Kelenvänd ==
 * ''Not  pästta  staučha'' — söda zavottä.
 
 {{stub}}
-
 [[Kategorii:Kalanpüdused]]
