--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -50,7 +50,9 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
 * ''Sapkoiden omblii om kaiken sapkata, lačnik — lačuta, a venehnik — veneheta.''
 * ''Seibhid eile, ka aid vereb.''
+* ''Spasibospäi balahonha hijamad ed omble.''
 * ''Tervhut ed osta.''
+* ''Velgal oma pit'käd jaugad.'' (hätken pördust varastada)
 * ''Verhan vargastad, ičeiž kadotad.''
 </blockquote>
 
