--- a/Laht.mw
+++ b/Laht.mw
@@ -1,13 +1,13 @@
 {{10000}}{{A10000}}
 {{Znamoičendad|Laht (znamoičendad)}}
-[[Fail:Повенецкий залив.jpg|thumb|250px|[[Änine|Änižen]] [[Povenecan laht]] läz [[Pindušid]]-žilod]]
+[[Fail:Повенецкий залив.jpg|thumb|250px|[[Änine|Änižen]] [[Povenecan laht]] läz [[Pindušid]]-žilod, [[Karjalan Tazovaldkund]], [[Venäma]]]]
 '''Laht''' om süvenus kuivmaha [[valdmeri|valdmeren]], [[meri|meren]], [[järv]]en vai toižen vezišton pala, joudai vedenvajehtuz jäb vezištonke.
 
-Lahten toižendad oma [[učulm]] (abai), [[merikar]], [[estuarii]], [[fjord]], [[liman]], [[lagun]].
+Lahten toižendad oma [[učulm]] (abai), [[merikar]], [[estuarii]], [[fjord]], [[liman]], [[lagun]]. Lugetas vulkanan upotadud päd i atollan lagunad lahteks mugažo.
 
 Lahten gidrologižed i gidrohimižed arvoimižed oma ühtejiččed kaiken vezišton arvoimižidenke. Erasiš statjoiš klimatan sijaližed eriližused i vedhuz kontinentaspäi ližatas specifižid pirdoid lahten pindšoidun gidrologižile harakteristikoile.
 
-Mail'man valdmeren järedad lahted: [[Aläskan laht|Aläskan]], [[Bengalijan laht|Bengalijan]], [[Biskaine laht|Biskaine]], [[Sur' Avstralijan laht|Sur' Avstralijan]] i [[Gvinejan laht|Gvinejan]] lahted.
+Mail'man valdmeren järedad lahted: [[Aläskan laht|Aläskan]], [[Bengalijan laht|Bengalijan]], [[Biskaine laht|Biskaine]], [[Sur' Avstralijan laht|Sur' Avstralijan]] i [[Gvinejan laht|Gvinejan]] lahted. Nimitadas lahtikš erasid akvatorijoid, miččed oma mered gidrologižen režiman mödhe, oz., [[Meksikan laht|Meksikan]], [[Gudzonan laht|Gudzonan]], [[Persijan laht|Persijan]] i [[Kalifornijan laht|Kalifornijan]] lahted, muga tegihe istorižikš.
 
 == Homaičendad == 
 <references />
