--- a/.rs.mw
+++ b/.rs.mw
@@ -1,4 +1,6 @@
-'''.rs''' om [[Serbii|Serbijan]] [[DNS|Internet-domen]]. Se om avaitud [[2007. voz'|2007]]-nden voden 24. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/rs.html IANA — .rs Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.rs''' om [[Serbii|Serbijan]] [[DNS|Internet-domen]]. Se om avaitud [[2007. voz'|2007]]-nden voden 24. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/rs.html IANA — .rs Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, Mustmägin erigoičendan jäl'ghe. Komplimentarine domen om '''[[.срб]]''' domennimiden täht kirilližel kirjamištol. Vll 1989−2010 '''[[.yu]]'''-domen oli kävutamas valdkundan territorijal.
+
+Registracii om lasktud koumandel tazopindal.
 
 == Homaičendad ==
 <references />
