--- a/.rs.mw
+++ b/.rs.mw
@@ -1,6 +1,7 @@
-'''.rs''' om [[Serbii|Serbijan]] [[DNS|Internet-domen]]. Se om avaitud [[2007. voz'|2007]]-nden voden 24. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/rs.html IANA — .rs Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, Mustmägin erigoičendan jäl'ghe. Komplimentarine domen om '''[[.срб]]''' domennimiden täht kirilližel kirjamištol. Vll 1989−2010 '''[[.yu]]'''-domen oli kävutamas valdkundan territorijal.
+[[Fail:DotRS domain logo.png|thumb|right|250px|Domenan logotip]]
+'''.rs''' om [[Serbii|Serbijan]] [[DNS|Internet-domen]]. Se om avaitud [[2007. voz'|2007]]-nden voden 24. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/rs.html IANA — .rs Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, Mustmägin erigoičendan jäl'ghe. Komplimentarine domen om '''[[.срб]]''' domennimiden täht kirilližel kirjamištol. Vll 1989−2010 [[.yu]]-domen oli kävutamas valdkundan territorijal.
 
-Registracii om lasktud koumandel tazopindal.
+Registracii .rs-zonas om lasktud koumandel tazopindal. Personoile sab registriruidas vaiše '''.in.rs'''-aladomenal.
 
 == Homaičendad ==
 <references />
@@ -8,6 +9,7 @@ Registracii om lasktud koumandel tazopindal.
 == Irdkosketused ==
 * [http://www.rnids.rs/ Domenan sait — «Регистар националног Интернет домена Србиjе (RNIDS)» (''rnids.rs'')] {{ref-sr}} {{ref-en}} (mugažo om [[.срб]]-domenan registran)
 * [http://iana.org/domains/root/db/rs.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.rs}}
 
 {{CcTLD}}
 
