--- a/.rs.mw
+++ b/.rs.mw
@@ -1,7 +1,14 @@
 [[Fail:DotRS domain logo.png|thumb|right|250px|Domenan logotip]]
 '''.rs''' om [[Serbii|Serbijan]] [[DNS|Internet-domen]]. Se om avaitud [[2007. voz'|2007]]-nden voden 24. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/rs.html IANA — .rs Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, Mustmägin erigoičendan jäl'ghe. Komplimentarine domen om '''[[.срб]]''' domennimiden täht kirilližel kirjamištol. Vll 1989−2010 [[.yu]]-domen oli kävutamas valdkundan territorijal.
 
-Registracii .rs-zonas om lasktud koumandel tazopindal. Personoile sab registriruidas vaiše '''.in.rs'''-aladomenal.
+Registracii .rs-zonas om lasktud koumandel tazopindal. Vn 2018 tal'vkuspäi voib kävutada latinan kirjamišton ližakirjamid domennimes (kaik 67 znamad). Personoile sab registriruidas vaiše '''.in.rs'''-aladomenal.
+
+Kahtenden tazopindan reglamentiruidud domenad (juridižiden kompanijoiden vaiše):
+* '''.co.rs''' — korporacijad
+* '''.org.rs''' — civiližed organizacijad i associacijad
+* '''.edu.rs''' — opendusen aluzkundad
+* '''.ac.rs''' — Serbijan akademižed i tedoidusen verkod
+* '''.gov.rs''' — valdkundaližed organad.
 
 == Homaičendad ==
 <references />
