--- a/.rs.mw
+++ b/.rs.mw
@@ -10,6 +10,8 @@ Kahtenden tazopindan reglamentiruidud domenad (juridižiden kompanijoiden vaiše
 * '''.ac.rs''' — Serbijan akademižed i tedoidusen verkod
 * '''.gov.rs''' — valdkundaližed organad.
 
+Registracijan kahtendel tazopindal olmatomuz Serbijas om niihe azjoihe sidodud: domennimed .rs-lopindanke oma levitadud anglijankel'žiš maiš, äi anglijan kelen sanoid oma mugomanke lopindanke; saitad programiruindan [[Rust (programiruindan kel')|Rust]]-kelen polhe ottas .rs-lopindad, kuti failad-ki sen kelel; Brazilijan [[Rio Grande du Sul]]-štat kävutab sidä-žo domennimed vn 2018 elokuspäi.
+
 == Homaičendad ==
 <references />
 
