--- a/.li.mw
+++ b/.li.mw
@@ -1,12 +1,17 @@
-'''.li''' om [[Lihtenštein]]an [[DNS|Internet-domen]]. Se om avaitud [[1993. voz'|1993]]-nden voden 26. päiväl uhokud.<ref>[http://iana.org/domains/root/db/li.html IANA — .li Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+[[Fail:DotLI domain logo.png|thumb|right|250px|Domenan logotip]]
+'''.li''' om [[Lihtenštein]]an [[DNS|Internet-domen]]. Se om avaitud [[1993. voz'|1993]]-nden voden 26. päiväl uhokud<ref>[http://iana.org/domains/root/db/li.html IANA — .li Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domenan sponsor i administrator om Lihtenšteinan universitet ([[Vaduc]]).
+
+Ei ole registracijan röunadusid kahtendel tazopindal, vaiše lühüdad nimed (koume kirjant) oma rezerviruidud Lihtenštein-valdkundan täht.
+
+Kaikiš paksumba kävutadas domennimed verhiš maiš: [[Nju Jork]]an Long Ailend-sarel, [[venäkel']]žiš maiš sanoiden täht li-lopindanke, [[kitajalaižed|kitajižed]] personad Li-kanzannimenke.
 
 == Homaičendad ==
 <references />
 
-
 == Irdkosketused ==
-* [http://www.nic.li/ Domenan sait (''nic.li'')] {{ref-en}} {{ref-de}}, alištub Lihtenšteinan ruhtinazkundan kommunikacijoiden ofisale, ohjandai om ''«SWITCH The Swiss Education & Research Network»'', Cürih, Šveicarii
+* [http://www.nic.li/ Domenan sait (''nic.li'')] {{ref-en}} {{ref-de}}, alištub Lihtenšteinan ruhtinazkundan kommunikacijoiden ofisale, ohjandai om ''«SWITCH The Swiss Education & Research Network»'' (se-žo [[.ch]]-domenan registrator), [[Cürih]], Šveicarii
 * [http://iana.org/domains/root/db/li.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.li}}
 
 {{CcTLD}}
 
