*Empty MediaWiki Message*

--- a/.li.mw
+++ b/.li.mw
@@ -3,7 +3,7 @@
 
 Ei ole registracijan röunadusid kahtendel tazopindal, vaiše lühüdad nimed (koume kirjant) oma rezerviruidud Lihtenštein-valdkundan täht.
 
-Kaikiš paksumba kävutadas domennimed verhiš maiš: [[Nju Jork]]an Long Ailend-sarel, [[venäkel']]žiš maiš sanoiden täht li-lopindanke, [[kitajalaižed|kitajižed]] personad Li-kanzannimenke.
+Kaikiš paksumba kävutadas domennimed verhiš maiš: saksankel'žiš maiš, [[Nju Jork]]an Long Ailend-sarel, [[venäkel']]žiš maiš sanoiden täht li-lopindanke, [[kitajalaižed|kitajižed]] personad Li-kanzannimenke.
 
 == Homaičendad ==
 <references />
