*Empty MediaWiki Message*

--- a/4._Kunigahiden_kirj.mw
+++ b/4._Kunigahiden_kirj.mw
@@ -3,7 +3,7 @@
 
 Original om sätud evrejan kelel. Kirj kogoneb 25 jagusespäi.
 
-Evrejan vero lugeb, miše kirjan tegii om [[Jeremia (endustai)|Jeremia]]-endustai. Toižen ezimeletusen mödhe, kirj om sätud [[Ezdra]]-kirjnikal tundmatomiden avtoroiden äivoččiden kirjutusiden alusel. Jätktab [[3. Kunigahiden kirj]]ad, starinoičeb [[Izrailin car'kund|Izrailin]] i [[Judejan car'kund|Judejan]] car'kundoiden nell'sadavoččes istorijas edel niiden alištust [[Assirii|Assirijan]] i [[Vavilonan car'kund|Vavilonan]] ohjastajiden tobmudele.
+Evrejan vero lugeb, miše kirjan tegii om [[Jeremia (endustai)|Jeremia]]-endustai. Toižen ezimeletusen mödhe, kirj om sätud [[Ezdra]]-kirjnikal tundmatomiden avtoroiden nell'sadavoččiden kirjutusiden alusel. Jätktab [[3. Kunigahiden kirj]]ad, starinoičeb [[Izrailin car'kund|Izrailin]] i [[Judejan car'kund|Judejan]] car'kundoiden istorijas edel niiden alištust [[Assirii|Assirijan]] i [[Vavilonan car'kund|Vavilonan]] ohjastajiden tobmudele.
 
 == Homaičendad ==
 <references />
