--- a/Makenzen_August_fon.mw
+++ b/Makenzen_August_fon.mw
@@ -1,6 +1,15 @@
 {{Personalii}}
 '''August fon Makenzen''' ({{lang-de|August von Mackensen}}; sünd. [[6. tal'vku]] 1849, Lipnic-küläerižpert', [[Saksonijan provincii|Saksonii]], [[Germanijan imperii]] — kol. [[8. kül'mku]] 1945, Burghorn, [[Alasaksonii]], [[Germanii]]) oli [[Germanijan imperii|germanine]] jeneral-fel'dmaršal (22. kezaku 1915) i sodapämez', [[Ezmäine mail'man voin|Ezmäižen mail'man voinan]] ühtnii.
 
+== Biografii ==
+Laps'aigan August lopi [[Galle (lidn, Saksanma)|Galle]]-lidnan gimnazijad. Tuli služdä armijan joudjale radnikusele 2. leibgusarpolkha vl 1869. Ühtni voziden 1870−1871 franciž-prussijan sodaha, sai leitnantan arvod. Vll 1870−1873 mez' oli varas, openui Gallen universitetas, sid' pördui sihe-žo polkha.
+
+Vspäi 1880 Makenzen služi Päštabas. Vl 1887 käski 9. dragunpolkan eskadronal, vspäi 1888 radnikoiči 4. divizijan štabas.
+
+Ezmäižen mail'man sodan aigan sodamehen joukud saiba tarbhaižiden vägestusiden rived, i oigetaškanzihe Makenzenad frontan kaikiš jügedambihe ezipirdoihe.
+
+Vl 1920 mez' läksi erindha. Nacistine propagand tegihe Makenzenad päfiguraks, mitte ühtenzoiti Germanijan aigad kahten mail'man sodan keskes. Iče fel'dmaršal distanciruihe nacional-socializman ideologijaspäi. Koli anglijan okkupacijan zonas.
+
 == Homaičendad ==
 <references/>
 
