*Empty MediaWiki Message*

--- a/Ašaffenburg.mw
+++ b/Ašaffenburg.mw
@@ -9,7 +9,7 @@
  | Voz' = 2017
  | Pind = 62.45
  | Fail = Aschaffenburger Schloss, edit.jpg
- | Pämez' = Klaus Herzog (2000—)
+ | Pämez' = Klaus Herzog<br/>(2000—)
  | Telefonkod = +49-6021. +49-6028
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
@@ -19,12 +19,14 @@
 Eländpunkt mainitase ezmäižen kerdan vl 974 [[Otto II]]-imperatoran dokumentas. Johannisburg-zamk (om saudud vll 1605−1614, {{lang-de|Schloss Johannisburg}}) oli [[Mainc]]an episkopiden rezidencijaks 18. voz'sadhasai. [[Toine mail'man soda|Toižen mail'man sodan]] aigan lidnan tobj pala oli pandud mantazole amerikalaižil eläjiden lujan vastustusen tagut. Vozil 1945−2007 [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] sodabaz oli lidnas.
 
 == Geografijan andmused ==
-Lidn sijadase [[Main (jogi)|Main-jogen]] randoil, 138 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Frankfurt Mainal]]-lidnhasai om 41 km lodeheze. Ašaffenburg jagase 10 lidnrajonha.
+Lidn sijadase [[Main (jogi)|Main-jogen]] randoil, 138 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Frankfurt Mainal]]-lidnhasai om 41 km lodeheze.
+
+Ašaffenburg jagase kümneks lidnrajonaks.
 
 == Eläjad da ižanduz ==
 Vl 1950 eläjiden lugu oli 45 499 ristitud. Kaikiš suremb ristitišt oli 69 863 eläjad vl 2006 i om nügüd'. Rahvahad (2011): [[saksalaižed]] — 88%, toižed rahvahad — 12%.
 
-Ašaffenburg šingotase mašiništonsauvomižel («Linde Hydraulics» — päfater i 2 tegint, «Takata» — avtodetalid) i logistikal («[[DPDgroup|Dynamic Parcel Distribution]]»-kompanijan päfater).
+Ašaffenburg šingotase mašiništonsauvomižel («Linde Hydraulics» — päfater i kaks' tegint, «Takata» — avtodetalid) i logistikal («[[DPDgroup|Dynamic Parcel Distribution]]»-kompanijan päfater).
 
 == Sebruzlidnad ==
 * {{HUN|#}} [[Miškol'c]], [[Mad'jaranma]] (vspäi 1996)
