--- a/Orsk.mw
+++ b/Orsk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Orsk<br />Орск
- | Lidnanznam = Coat of arms of Orsk.jpg
+ | Lidnanznam = Orsk COA (2008).gif
  | Flag = Flag of Orsk.jpg
  | Lidnanznam text = Orskan lidnanznam
  | Flag text = Orskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 230,414
- | Voz' = 2017
+ | Eläjiden lugu = 224,814
+ | Voz' = 2021
  | Pind = 621.33
- | Fail = St.Orsk.jpg
- | Pämez' = Andrei Odincov<br />(tal'vku 2016—)
+ | Fail = Orsk from viewpoint 05.jpg
+ | Pämez' = Vasilii Kozupica<br />(semendku 2019—)
  | Telefonkod = +7-3537-xxx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -21,22 +21,38 @@
 '''Orsk''' ({{lang-ru|Орск}}) om [[Venäma]]n lidn da lidnümbrik [[Orenburgan agj]]an päivnouzmas, röunatab [[Kazahstan]]anke. Se om agjan kahtenz' surtte lidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1735 kuti ''Orenburg-lidnuz'' langenijan Or'-jogen mödhe ({{lang-ru|Орь}}). Vl 1741 panihe nügüdläižen Orenburgan alust [[Ural (jogi)|Ural-jogen]] alemba mödvedhe (hot' Orenburg sijadase Sakmar-jogensunno, eile Or'-jogen), olijad lidnust udesnimitihe ''Oren lidnuseks''. Se sai lidnan statusad vl 1865.
+Eländpunktan aluz om pandud vl 1735 kuti ''Orenburg-lidnuz'' langenijan [[Or']]-jogen mödhe ({{lang-ru|Орь}} 332 km pitte). Vl 1741 panihe nügüdläižen Orenburgan alust [[Ural (jogi)|Ural-jogen]] alemba mödvedhe (hot' Orenburg sijadase Sakmar-jogensunno, eile Or'-jogen), olijad lidnust udesnimitihe ''Oren lidnuseks''. Se sai lidnan statusad vl 1865.
 
 == Geografijan andmused ==
-Lidn sijadase [[Uralmäged|Uralan]] suvižel ezimägištol, 200 m keskmäižel korktusel valdmeren pindan päl. Orskan vanh pala sijadase Ural-jogen oiktal randal. Matkad [[Orenburg]]hasai om 240 km orhal, 270 km avtotedme vai raudtedme. Lähembaižed järedad lidnad oma [[Novotroick]] päivlaskmha (om 4 km röunoiden keskes) i Kazahstanan [[Aktobe]] (170 km suvipäivlaskmha). Lidnümbrik röunatab Kazahstananke, röunpäličmänendtaho om 30 km suvhe lidnan keskusespäi.
+Lidn sijadase [[Uralmäged|Uralan]] suvižel ezimägištol, 200 m keskmäižel korktusel valdmeren pindan päl. Orskan vanh pala sijadase Ural-jogen oiktal randal. Matkad [[Orenburg]]hasai om 240 km orhal, 270 km avtotedme vai raudtedme. Lähembaižed järedad lidnad oma [[Novotroick]] päivlaskmha (om nell' kilometrad röunoiden keskes) i Kazahstanan [[Aktobe]] (170 km suvipäivlaskmha). Lidnümbrik röunatab Kazahstananke, röunpäličmänendtaho om 30 km suvhe lidnan keskusespäi.
 
-Orsk jagase koumhe territorialižhe rajonha vspäi 1972, niil ei ole ičeze administracijoid. Kahesa žilod mülüdas lidnümbrikho mugažo, niiden ühthine ristitišt oli 4 204 eläjad vl 2010. Lidnümbrikon pind — 1 426,54 km².
+Orsk jagase koumeks territorialižeks rajonaks vspäi 1972, niil ei ole ičeze administracijoid. Kahesa žilod mülüdas lidnümbrikho mugažo, niiden ühthine ristitišt oli 4 204 eläjad vl 2010. Lidnümbrikon pind — 1 426,54 km².
 
 == Eläjad ==
 Vn 2010 Venäman rahvahalugemižen mödhe lidnan eläjiden lugu oli 239 800 ristitud, lidnümbrikon — 244 004 ristitud. Kaikiš suremb lidnan ristitišt oli 276 tuh. eläjid vl 1995.
 
 Rahvahad (2010, enamba 0,4%, ozutadud rahvahudenke): [[venälaižed]] — 81,7%, [[kazahlaižed]] — 5,3%, [[totarlaižed]] — 3,9%, [[ukrainalaižed]] — 2,7%, [[baškiralaižed]] — 1,7%, [[saksalaižed]] — 1,1%, [[mordvinalaižed]] — 0,7%, [[azerbaidžanlaižed]] — 0,5%, [[armenijalaižed]] — 0,5%, toižed rahvahad — 1,9%.
 
+Edeline lidnümbrikon pämez' om Andrei Odincov (tal'vku 2016 — sulaku 2019).
+
 == Ižanduz da transport ==
 Ižandusen päsarakod oma mujumetalloiden tehmine, mašiništonsauvomine, kivivoin ümbriradmine. Sömtegimišton i elektroenergetikan edheotandad oma šingotadud, järed päiväiželektrostancii om saudud lidnümbrikos.
 
 Avtobusad da tramvaid oma kundaližeks transportaks lidnas. Rahvahidenkeskeine ''Orsk''-lendimport (''OSW / ОСК'') sijadase 17 km suvhe lidnan keskusespäi, tehtas reisid Orenburgan agjadme, [[Moskv]]hasai, sezonreisid [[Simferopol'|Simferopolihesai]].
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Views of Orsk 8.jpeg|Lidnümbrikon administracijan sauvuz Komsomol'skai-torgul (2021, tagamal)
+Орский краеведческий музей.jpg|Orskan kodirandantedištandmuzei (2018)
+IMAG 0220.jpg|Sündun Toižetamižen päjumalanpert', vn 2012 nägu
+Views of Orsk 60.jpeg|Orskan kivivoinümbriradai tegim (Orsknefteorgsintez) vl 2021
+Orsk PWS.jpg|Orskan päiväiželektrostancii vl 2017
+Texnikum.jpg|Orskan kivivoitehnikum (2010)
+Орский государственный драматический театр имени А. С. Пушкина.jpg|Orskan valdkundaline dramteatr A. Puškinan nimed (2018)
+ДС "Юбилейный".jpg|«Jubileinii»-sportpert'kulu (2009)
+Аэропорт Орск.jpg|Orsk-lendimportan sauvuz vl 2014
+St.Orsk.jpg|Orsk-päraudtestancijan sauvuz vl 2005
+</gallery>
 
 == Irdkosketused ==
 * [http://orsk-gorsovet.ru/ Lidnan Nevondkundan oficialine sait (''orsk-gorsovet.ru'').] {{ref-ru}}
