--- a/Novotroick.mw
+++ b/Novotroick.mw
@@ -5,29 +5,46 @@
  | Lidnanznam text = Novotroickan lidnanznam
  | Flag text = Novotroickan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 88,216
- | Voz' = 2017
+ | Eläjiden lugu = 82,463
+ | Voz' = 2021
  | Pind = 84.21
  | Fail = Весенний Новотроицк - Novotroitsk in April - panoramio.jpg
- | Pämez' = Ivan Filippov<br />(kül'mku 2017—)
+ | Pämez' = Dmitrii Bufetov<br />(semendku 2018—)
  | Telefonkod = +7-3537-xxx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
+[[Fail:ЛДПР в Новотроицке в 2007 г..jpg|thumb|left|250px|Lidnan valičemižümbrikod vl 2007]]
 '''Novotroick''' ({{lang-ru|Новотроицк}}) om [[Venäma]]n lidn da lidnümbrik [[Orenburgan agj]]an suvipäivnouzmas.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1920 kuti futoriden ühtenzoituz. Saudihe [[raud]]an metallurgijan kombinatad sijaližel torhudel vozil 1931−1955 (vspäi 1992 «Uralan Teraz»-edheotand). Vl 1945 ühtištuihe ''Novo-Troick-žilod'' lähiženke Akkermanovk-žilonke ({{lang-ru|Аккермановка}}) da anttihe lidnan statusad. Toižed edheotandad oma hromühtnendoiden tegim i sauvondmaterialiden kompanijad (cement, raudbeton, šebin', pilindmaterialad).
+Eländpunktan aluz om pandud vl 1920 kuti futoriden ühtenzoituz. Saudihe [[raud]]an metallurgijan kombinatad sijaližel torhudel vozil 1931−1955 (vspäi 1992 «Uralan Teraz»-edheotand). Vl 1945 ühtištuihe ''Novo-Troick-žilod'' lähiženke Akkermanovk-žilonke ({{lang-ru|Аккермановка}}) da anttihe lidnan statusad. Novotroickan toižed edheotandad oma [[hrom|hromühtnendoiden]] tegim i sauvondmaterialiden kompanijad ([[cement]], raudbeton, šebin', pilindmaterialad).
 
 == Geografijan andmused ==
 Lidn sijadase [[Ural (jogi)|Uralanjogen]] oiktal randal, 200 m ü.m.t. keskmäižel korktusel. Röunatab [[Kazahstan]]anke, matkad [[Orenburg]]hasai om 276 km päivlaskmha, [[Orsk]]an röunhasai — 4 km päivnouzmha.
 
-Novotroick jagase 2 rajonha (Päivlaskmaine i Keskuzrajon), sen ližaks om severz'-se lidnanlaptad. Seičeme žilod, raudtesarak i Guberl'-raudtestancii mülüdas lidnümbrikho. Lidnümbrikon pind — 352,34 km².
+Novotroick jagase kahteks rajonhaks (Päivlaskmaine i Keskuzrajon), sen ližaks om severz'-se lidnanlaptid. Seičeme žilod, raudtesarak i Guberl'-raudtestancii mülüdas lidnümbrikho. Lidnümbrikon pind — 352,34 km².
 
 == Eläjad da transport ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 98 173 ristitud, lidnümbrikon — 105 367 ristitud. Kaikiš suremb ristitišt oli vozil 1994−2001, 109..111 tuhad eläjid (111 tuh. rist. vl 1996). Vl 2017 kaik 95 139 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 98 173 ristitud, lidnümbrikon — 105 367 ristitud. Kaikiš suremb ristitišt oli 109..111 tuhad eläjid vozil 1994−2001 (111 tuh. rist. vl 1996). Vl 2017 kaik 95 139 ristitud elihe lidnümbrikos.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kuz' jumalanpertid<ref>[http://sobory.ru/geo/locat/6160 Novotroickan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: phh. Pedroin i Pauloin päjumalanpert' (om saudud vll 1994−2000), nell' jumalanpertid i časoun'.
+
+Edeline lidnümbrikon pämez' om Jurii Araskin (reduku 2015 — kül'mku 2017).
 
 Tramvaid, avtobusad i maršrutkid oma kundaližeks transportaks lidnas, ezilidnelektrojonused ühtenzoittas lähižidenke lidnoidenke. Raudtestancii sijadase «[[Orenburg]] — [[Orsk]]»-jonol.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Metallurgists Palace of Culture in Novotroitsk.jpg|Metallurgoiden kul'turkeskuz (2020)
+St Peter and Paul's church in Novotroitsk.jpg|Phh. Pedroin i Pauloin päjumalanpert', vn 2021 nägu
+Civil engineering college building in Novotroitsk.jpg|Novotroickan sauvondtehnikum (2020)
+Russia Novotroitsk Pobeda Ice palace.jpg|«Pobeda»-jäpert'kulu (2017, ''Vägestuz'')
+Russia Novotroitsk railway station.jpg|Novotroick-päraudtestancijan sauvuz vl 2017
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://novotroitsk.orb.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''novotroitsk.orb.ru'').] {{ref-ru}}
