*Empty MediaWiki Message*

--- a/Novotroick.mw
+++ b/Novotroick.mw
@@ -28,7 +28,7 @@ Novotroick jagase kahteks rajonhaks (Päivlaskmaine i Keskuzrajon), sen ližaks 
 == Eläjad da transport ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 98 173 ristitud, lidnümbrikon — 105 367 ristitud. Kaikiš suremb ristitišt oli 109..111 tuhad eläjid vozil 1994−2001 (111 tuh. rist. vl 1996). Vl 2017 kaik 95 139 ristitud elihe lidnümbrikos.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kuz' jumalanpertid<ref>[http://sobory.ru/geo/locat/6160 Novotroickan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: phh. Pedroin i Pauloin päjumalanpert' (om saudud vll 1994−2000), nell' jumalanpertid i časoun'.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kuz' jumalanpertid<ref>[http://sobory.ru/geo/locat/6160 Novotroickan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: phh. Pedroin i Pauloin päjumalanpert' (om saudud vll 1994−2000), nell' jumalanpertid i časoun'. [[Islam]]an pühäpert' om avaitud.
 
 Edeline lidnümbrikon pämez' om Jurii Araskin (reduku 2015 — kül'mku 2017).
 
