--- a/Jumal.mw
+++ b/Jumal.mw
@@ -10,6 +10,7 @@ Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
+* ''Hän jumalkodas om rott'ud.'' (dročejan ristitun polhe)
 * ''Jumal ei käske edelpäi teta.''
 * ''Jumalan bardha em voigoi tabatas.''
 * ''Jumalata ala mäne nikuna.''
