/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -28,6 +28,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Gorä ei kävele puidme, a käveleb ristituidme.''
 * ''Hebod taganpäi, koirad edespäi, ristitud kaikiš polišpäi tarbiž varaita.''
 * ''Hill' hotkan sabutab.''
+* ''Hän jumalkodas om rott'ud.'' (dročejan ristitun polhe)
 * ''Ičesaz kitänd nikuna ei kožu.''
 * ''Järed da äred, pen' da mahtav.''
 * ''Kana eile lind, ak eile ristit.''
@@ -35,6 +36,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Kenel om äi, ka tarbiž völ enamb.''
 * ''Kesknahkaspäi om vil'düd.'' (koverikaz ristit)
 * ''Käredan ristitun sormed om harotadud.''
+* ''Nece ristit hüvälaz — ka hüvä, a hubalaz — ka ala osudi.''
 * ''Nece ristit om kuti must mägr.'' (käredanhimoičii)
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
 * ''Om paremb kacta nagrajan suhu, mi itkijan.''
