/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -17,6 +17,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Hondod mest hüväl vaihel ed johtuta.''
 * ''Kaiked tot akale ala sanu.''
 * ''Kurdhele kaks' kerdad ei sanugoi.''
+* ''Käreganded, ka vaihen hot' ostad da sanud.''
 * ''Neičukaine rodiše, i paginaine zavodiše.''
 * ''Paha kel' pahan i pagižeb.''
 * ''Pahal ristitul mugomad i paginad.''
