--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -106,13 +106,17 @@
 == Heimolaižihe sidodud vepsän muštatišed ==
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
+* ''Anopel om pit'k hambaz.'' (ei jäta muite)
+* ''Anopespäi armastust, ku habaižes puspäi lämäd.''
 * ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
 * ''Heimod om äi, söda ei kus.''
 * ''Hüvä vävu, da harvemba kävu.''
 * ''Hüväd susedad pahaze heimho ed vajehta.''
+* ''Kanzata om paha elo.''
 * ''Ken kenenke eläb, se sen tedab-ki.''
 * ''Ku mam om koirakaz, ka i tütar om hond.''
 * ''Meiden mind' linneb radon sijas.''
+* ''Paha nado ei anda lebaitas.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
 * ''Poig lajib — libu päčile, vävu lajib — kacu, kus uks' om.''
 * ''Poigas vähäd, tütres tühjad.''
