--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -12,6 +12,7 @@ Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), seb
 == Armastushe sidodud vepsän muštatišed ==
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
+* ''Anopespäi armastust, ku habaižes puspäi lämäd.''
 * ''Armaz kuti hahk lambaz verhas läväs.''
 * ''Armhemb ičtaiž ei ole nikeda.''
 * ''Hambhan kibu da mel'heižen kibu oma ühtejiččed.''
