/* Habha sidodud vepsän muštatiž da ozoitez */ +

--- a/Hab.mw
+++ b/Hab.mw
@@ -32,13 +32,14 @@ Hab om levitadud [[pu (material)|pumaterial]]. Ištutadas eländpunktoiš dekora
 * ''Habaine pä'' — puine idol vai sangedpä, otuz.
 * ''Habik, habišt, habikišt, habžom'' — habaine mec.
 
-== Habha sidodud vepsän muštatiž da ozoitez ==
-;Muštatiž
+== Habha sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
+* ''Anopespäi armastust, ku habaižes puspäi lämäd.''
 * ''Koivuižes kandos habašt vezad ei kazva.''
 </blockquote>
 
-;Ozoitez
+=== Ozoitez ===
 <blockquote>
 * Pol'hebod, pol'habad (segl).
 </blockquote>
