--- a/Naine.mw
+++ b/Naine.mw
@@ -13,6 +13,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Hebon higoho da akan voikhu ala kacu.''
 * ''Hibuz pit'k, a mel' lühüd.'' (naižiden polhe)
+* ''Hüväl akal ka mužik-ki hüvä om.''
 * ''Kaiked tot akale ala sanu.''
 * ''Kana eile lind, ak eile ristit.''
 * ''Ken emägaks rodiše, ka se ei ole ristit.'' (naižen jügedan ozan polhe)
