--- a/Söm.mw
+++ b/Söm.mw
@@ -42,6 +42,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Rad radon sijas, a sönd — söndan sijas.''
 * ''Rates om lašk, a södes om vahv.''
 * ''Sapkoid kuluta ed — mustikašt sö ed.''
+* ''Sures kanzas kaik sijad oma magedambad.''
 * ''Sö čomad lent i pida čomad mel't.''
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Söid kut siga, läksid kut koza.''
