--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -114,6 +114,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Hüväd susedad pahaze heimho ed vajehta.''
 * ''Kanzata om paha elo.''
 * ''Ken kenenke eläb, se sen tedab-ki.''
+* ''Kodavävüks mända, kut sügüzel ägehšorpil magata.''
 * ''Ku mam om koirakaz, ka i tütar om hond.''
 * ''Meiden mind' linneb radon sijas.''
 * ''Paha nado ei anda lebaitas.''
