/* Sügüz'he sidodud vepsän muštatišed */ +

--- a/Sügüz'.mw
+++ b/Sügüz'.mw
@@ -10,6 +10,7 @@ Sügüz' om päličmänendsezon. Sen aigan päivänvauktusen lugumär i hätkeli
 <blockquote>
 * ''Kevädel — päiv, a sügüzel nedal'.''
 * ''Keväz'vihm kazvatab, sügüz'vihm kadotab.''
+* ''Kodavävüks mända, kut sügüzel ägehšorpil magata.''
 * ''Midä kevädel semendad, sidä sügüzel rahnod.''
 * ''Nügüd' kaks' hämärad oma ühtes.'' (möhäižel sügüzel)
 * ''Sügüzel ahav puhub lämäks, a kevädel — viluks.''
