*Empty MediaWiki Message*

--- a/Meteoritan_lanktend_Uralal_vl_2013.mw
+++ b/Meteoritan_lanktend_Uralal_vl_2013.mw
@@ -1,5 +1,11 @@
-[[Fail:A trace of the meteorite in Chelyabinsk.JPG|thumb|right|250px|Meteoritan jäl'g taivhal.]]
-'''[[Čeläbinsk (meteorit)|Meteoranvuiččen hibjan]] poukahtuz atmosferas läz [[Čeläbinsk]]ad''' oli voden [[2013]] [[15. uhoku|uhokun 15. päivän]] homendesel läz 9:20 sijaližen aigan mödhe (UTC+6). [[Meteorit|Meteoranvuitte]] hibj poukahtui läz Čeläbinskad korktusel 15—25 km. Tirpnuziden lugun mödhe (1491 ristitud) necil meteorital ei ole analogoid istorijas.
+[[Fail:A trace of the meteorite in Chelyabinsk.JPG|thumb|right|250px|Meteoritan jäl'g taivhal]]
+'''[[Čeläbinsk (meteorit)|Meteoranvuiččen hibjan]] poukahtuz atmosferas läz [[Čeläbinsk]]ad''' tegihe voden [[2013]] [[15. uhoku|uhokun 15. päivän]] homendesel läz 9:20 sijaližen aigan mödhe (UTC+6). [[Meteorit|Meteoranvuitte]] hibj poukahtui läz Čeläbinskad 15—25 km korktusel. Tirpnuziden lugun mödhe (1615 ristitud) necil meteorital ei ole analogoid istorijas.
+
+Kosmine hibj oli 18 metrad surtte i 11 tuhad tonnoid vedutte (NASA:n lugustusen mödhe), tuli leten Man atmosferha 18,6 km/s pigudel i lujas teraval saumal. Taivhaline hibj čihozi 32,5 sekundas sen jäl'ghe, poukahtuzlainhiden levigandusenke. Se oli kaikiš suremb lanktenuziš maha kosmoshibjoišpäi vn 1908 [[Tunguskan meteorit]]an aigaspäi, mugomiden aigtegoiden paksuz om kerdan sadas vodes. Hibjan palad oma löutud šoidus 80 km pitte, kaikiš znamasižemb pala om libutadud Čebarkul'-järvespäi [[Čebarkul'|ühtennimiženno lidnanno]].
+
+Lainhed meteoroidan čihodamižespäi kucuiba murendusid lipkaiženvuiččes agjas Čeläbinskas da sen ezilidnoiš, Kaik 7320 pertid saiba murendusid. Läz kaik ajatadud pilazmoile stöklad (200 tuhad m² vai sen enamba) oliba vajehtadud ühtes kus aigtegon jäl'ghe.
+
+Meteoroid ei olend homaitud edel tulendad, Man i ratud kaimdajiden teleskopad kaceltas surembid objektoid — sada metrad da sen enamba.
 
 {{Commons|Category:2013 Russian meteor event}}
 
