--- a/Lužkovan_stil'.mw
+++ b/Lužkovan_stil'.mw
@@ -1,9 +1,10 @@
-[[Fail:Wiki Egg House, Mashkova Street, Moscow, Russia.jpg|thumb|right|250px|„Kodi-muna“]]
-M. k. '''„Lužkovan stil'“''' om [[neologizm]] [[Moskv]]an stiližiden eriližusiden znamoičendan täht [[Lužkov Jurii|Jurii Lužkovan]] lidnanohjandusen pordos (1992-2010).
+[[Fail:Wiki Egg House, Mashkova Street, Moscow, Russia.jpg|thumb|right|250px|«Kodi-muna»]]
+M. k. '''«Lužkovan stil'»''' om [[neologizm]] Venäman [[Moskv]]-pälidnan stil'eriližusiden znamoičendan täht [[Lužkov Jurii|Jurii Lužkovan]] lidnanohjandusen pordos (1992−2010). Lugetas [[kaprom]]-stilin statjaks (''kapitalistine romantizm''), levigandihe valdkundan provincialižiš-ki lidnoiš.
 
-Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kitč]]. Harakterizuiše pertišton sistematomusel.
+Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kitč]]. Harakterizuiše pertišton sistematomusel, pertiden čomitandal čuhunduižiden da baläsinoiden abul, «min-ni pojaviden» materialiden kävutandal krepindas. Sen ližaks, arhitekturan sferan kamandiž-administrativine pätandsistem andoi voimust panda mantazole istorižen pertišton kogonaižid fartalid lendamha uden stilin pertid niiden sijas.
 
 Nece «stil'» sai äi kritikad čomamahtmehišpäi.
+
 
 == Kacu mugažo ==
 * [[Lužkov Jurii|Jurii Lužkov]], [[Cereteli Zurab|Zurab Cereteli]]
