--- a/Lužkovan_stil'.mw
+++ b/Lužkovan_stil'.mw
@@ -5,6 +5,7 @@ Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklekti
 
 Nece «stil'» sai äi kritikad čomamahtmehišpäi.
 
+Lužkovan stilin ezikuvad oma mugomad sauvused kut «Nautilus»-torguindkeskuz Lubänkan torgul, «Puškin i Natali»-fontan Nikitan Verai-torgul, Operpajatandan keskuz Galina Višnevskajan nimed Ostoženkal, «Belii lebed'»-restoran Puhthidenno uitoidenno, «Samsung»-ofispert' Sur' Jakimank-irdal, «Novinskii passaž»-torguindkeskuz, «Patriarh»-pert' Patriarhuitoidenno, «Kodi-muna» Maškovan irdal.
 
 == Kacu mugažo ==
 * [[Lužkov Jurii|Jurii Lužkov]], [[Cereteli Zurab|Zurab Cereteli]]
