--- a/.ie.mw
+++ b/.ie.mw
@@ -1,6 +1,6 @@
 '''.ie''' om [[Irlandii|Irlandijan]] [[DNS|Internet-domen]]. Se om avaitud [[1988. voz'|1988]]-nden voden 27. päiväl vilukud<ref>[http://iana.org/domains/root/db/ie.html IANA — .ie Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Kaik 280 tuhad domennimid oli registriruidud .ie-zonas vn 2019 lopus.
 
-Registracii om lasktud kahtendel tazopindal oikti Irlandijan kompanijole i personoile. Verazmalaižile pidab todištada sidoid Irlandijan 32 administrativiženke ühtnikanke samha domennimen registracijad. [[Dublin]]an Universitetižen kolledžan kompjuterkeskuz ohjandab .ie-domenal. Registracii [[.irish]]-domenal om avaitud irlandižen diasporan täht vl 2015.
+Registracii om lasktud kahtendel tazopindal oikti Irlandijan kompanijole i personoile. Verazmalaižile pidab «todištada tetpaižid sidoid Irlandijan 32 administrativiženke ühtnikanke» samha domennimen registracijad. [[Dublin]]an Universitetižen kolledžan kompjuterkeskuz ohjandab .ie-domenal. Registracii [[.irish]]-domenal om avaitud irlandižen diasporan täht vl 2015.
 
 == Homaičendad ==
 <references />
